# setup.cfg is an ini file that contains option defaults for setup.py commands
# See https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name = benchmark-ab
version = 0.2.0
author = Mads Meisner-Jensen
maintainer = Mads Meisner-Jensen
description = Benchmark tools or scripts with tabular and histogram output
long_description = file: README.md
long_description_content_type = text/markdown
license: GPL-2
keywords: benchmark linux console
url = https://github.com/mmeisner/benchmark-ab
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2.0
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
#packages = benchmark_ab
python_requires = >=3.6

[options.entry_points]
console_scripts =
    benchmark-ab = :benchmark-ab.main
